--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="cambiar_nombre">Cambiarle el nombre</string>
     <string name="totalGastadoTitulo">Pagado: $</string>
     <string name="duplicarLista">¡Duplicar esta Lista!</string>
+    <string name="sin_nombre">Sin nombre</string>
+    <string name="lista_duplicada">Lista duplicada</string>
+    <string name="nuevo_nombre_para_la_lista">Nuevo nombre para la lista:</string>
+    <string name="ok">Ok</string>
 </resources>
